Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1389

RegularExpression does not use MemoryManager correctly.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • 2.6.0
    • 2.7.0
    • Utilities
    • None
    • All

    Description

      Under certain circumstances, creating a RegularExpression will result in memory being allocated and potentially de-allocated correctly. There are two problems:

      1. Memory is allocated from the global heap for instances of BMPattern.

      2. Memory for a string is allocated from the global MemoryManager instance, but de-allocated using an instance-specific MemoryManager instance.

      I will attach a patch for the problems.

      Attachments

        1. patch.txt
          1.0 kB
          David N Bertoni

        Activity

          People

            dbertoni David N Bertoni
            dbertoni David N Bertoni
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: